# djangoconus2022

./: .gitignore  contributions.py  pyproject.toml  slides.md
